feat: (server) company feature added
